Ton message de commit

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <section id="about">
     <h2>À propos de moi</h2>
-    <img src="images/file:///D:/Users/MonPortfolio/images/profil.png" alt="Photo de SOTOBE Kodjo Samuel">
+    <img src="images/profil.jpg" alt="Photo de SOTOBE Kodjo Samuel">
     <p>
       Bonjour ! Je suis <strong>SOTOBE Kodjo Samuel</strong>, étudiant en technologies de l'information à <strong>Defitech</strong>. Passionné par les réseaux et la communication, 
       je m'engage à concevoir des systèmes performants et sécurisés. Mon objectif : devenir un expert dans le domaine des réseaux et aider les entreprises à rester connectées.
